--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,11 +2,42 @@
   <head>
     <meta charset="utf-8">
     <title>Grid Lab</title>
+    <link rel="stylesheet" href="css/app.css">
+    <script src="js/vendor.js"></script>
     <script src="js/app.js"></script>
-    <script>grid = require('grid'); components = require('components');</script>
   </head>
   <body>
     <h1>Grid Lab</h1>
-    Nothing here yet...
+    <div id="canvas-container">
+      <canvas id="mainCanvas" width="600" height="400" style="border:1px solid #000"></canvas>
+    </div>
+    <button id="add-windfarms">Add windfarms</button>
+    <button id="add-houses">Add houses</button>
+    <button id="add-powerlines">Add powerlines</button>
+    <div id="sprite-container">
+      <img src="images/pinwheel.png" id="pinwheel"/>
+      <img src="images/house.png" id="house"/>
+    </div>
+
+
+    <script>
+      var Controller = require('controller'),
+          components = require('components'),
+          controller = new Controller('mainCanvas');
+
+      document.getElementById("add-windfarms").onclick = function() {
+        controller.setMouseMode("create");
+        controller.currentComponent = components.WindTurbine;
+      }
+
+      document.getElementById("add-houses").onclick = function() {
+        controller.setMouseMode("create");
+        controller.currentComponent = components.House;
+      }
+
+      document.getElementById("add-powerlines").onclick = function() {
+        controller.setMouseMode("connect");
+      }
+    </script>
   </body>
 </html>
